--- a/css/theme.css
+++ b/css/theme.css
@@ -43,10 +43,10 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 13px;
-  line-height: 24px;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #666;
+  font-size: 18px;
+  line-height: 28px;
+  font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #474553;
   overflow-x: hidden;
 }
 body.boxed-layout {
@@ -294,7 +294,7 @@ h4,
 h5,
 h6 {
   font-weight: 300;
-  color: #292929;
+  color: #474553;
 }
 h1,
 .h1 {
@@ -325,13 +325,13 @@ h4 {
   line-height: 32px;
 }
 h5 {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   font-weight: 400;
 }
 h6,
 .h6 {
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 700;
 }
@@ -356,13 +356,13 @@ h6,
     line-height: 26px;
   }
   h5 {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 24px;
     font-weight: 400;
   }
   h6,
   .h6 {
-    font-size: 12px;
+    font-size: 15px;
     line-height: 24px;
     font-weight: 700;
   }
@@ -398,7 +398,7 @@ h6.uppercase,
 }
 .bold-h6 {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -410,20 +410,20 @@ span {
   font-weight: 400;
 }
 p.lead {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 28px;
 }
 .sub {
-  font-size: 12px;
+  font-size: 15px;
 }
 @media all and (max-width: 767px) {
   p.lead {
-    font-size: 13px;
+    font-size: 15px;
     line-height: 24px;
   }
   p {
-    font-size: 12px;
+    font-size: 15px;
   }
 }
 a,
@@ -464,7 +464,7 @@ a:hover {
 }
 .label {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -474,7 +474,7 @@ a:hover {
   background: #47b475;
   border-radius: 0;
   padding: 6px 12px;
-  font-size: 10px;
+  font-size: 15px;
   vertical-align: middle;
 }
 blockquote {
@@ -493,7 +493,7 @@ blockquote {
   border-color: #47b475;
 }
 blockquote .author {
-  font-size: 12px;
+  font-size: 15px;
   display: block;
   float: right;
   margin-top: 16px;
@@ -510,7 +510,7 @@ blockquote .author {
     display: none;
   }
   blockquote {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 32px;
   }
   .columns-2 {
@@ -537,7 +537,7 @@ ul[data-bullet] li i:first-child {
   display: inline-block;
 }
 ul.lead li {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 40px;
 }
 /*!---------- 4. COLOURS ----------*/
@@ -557,7 +557,7 @@ ul.lead li {
   color: #666;
 }
 .color-primary {
-  color: #47b475 !important;
+  color: #474553 !important;
 }
 .color-red {
   color: #e31d3b !important;
@@ -726,7 +726,7 @@ footer.bg-dark li,
   height: 40px;
   min-width: 150px;
   line-height: 36px;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -771,13 +771,13 @@ footer.bg-dark li,
   width: 30px;
   height: 30px;
   line-height: 29px;
-  font-size: 13px;
+  font-size: 15px;
   min-width: 0;
   padding: 0 0 0 1px!important;
 }
 .btn-sm {
   height: 30px;
-  font-size: 11px;
+  font-size: 15px;
   line-height: 27px;
   min-width: 0;
 }
@@ -930,7 +930,7 @@ nav.bg-dark .logo-dark {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 11px;
+  font-size: 15px;
   content: "\e64b";
   font-family: 'themify';
   speak: none;
@@ -948,7 +948,7 @@ nav.bg-dark .logo-dark {
   width: auto;
 }
 .menu li a {
-  font-size: 11px;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1px;
@@ -1059,7 +1059,7 @@ nav.bg-dark .logo-dark {
   display: inline-block;
   padding: 6px 24px;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 15px;
   font-weight: 600;
 }
 .make-right {
@@ -1129,7 +1129,7 @@ nav.nav-centered .module.widget-handle {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 15px;
   font-weight: 600;
   display: none;
   opacity: .5;
@@ -1146,7 +1146,7 @@ nav.nav-centered .module.widget-handle {
 .widget-handle .cart .label {
   width: 17px;
   height: 17px;
-  font-size: 10px;
+  font-size: 15px;
   line-height: 17px;
   padding: 0;
   text-align: center;
@@ -1164,7 +1164,7 @@ nav.nav-centered .module.widget-handle {
 }
 .widget-handle .search-form input {
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
 }
 nav .widget {
   margin: 0;
@@ -1429,7 +1429,7 @@ nav .cart-overview a {
   .widget-handle .cart .label {
     width: 22px;
     height: 22px;
-    font-size: 12px;
+    font-size: 15px;
     line-height: 22px;
     top: 18px;
   }
@@ -1600,7 +1600,7 @@ nav.nav-centered.outOfSight .logo {
 /*!---------- 8. TOOLTIPS ----------*/
 .tooltip {
   font-weight: 600;
-  font-size: 13px;
+  font-size: 15px;
 }
 .tooltip-inner {
   border-radius: 0;
@@ -1671,7 +1671,7 @@ nav.nav-centered.outOfSight .logo {
     font-size: 18px;
   }
   .icon-xs {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 .embelish-icons {
@@ -1715,7 +1715,7 @@ input[type="password"] {
 }
 .input-with-label span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 11px;
+  font-size: 15px;
   text-transform: uppercase;
   color: #292929;
   letter-spacing: 1px;
@@ -1768,28 +1768,28 @@ textarea:focus {
   font-weight: bold;
   letter-spacing: 1px;
   color: #777;
-  font-size: 11px;
+  font-size: 15px;
 }
 :-moz-placeholder {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
   color: #777;
-  font-size: 11px;
+  font-size: 15px;
 }
 ::-moz-placeholder {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
   color: #777;
-  font-size: 11px;
+  font-size: 15px;
 }
 :-ms-input-placeholder {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
   color: #777;
-  font-size: 11px;
+  font-size: 15px;
 }
 input.transparent::-webkit-input-placeholder,
 button.transparent::-webkit-input-placeholder {
@@ -1815,7 +1815,7 @@ button[type="submit"] {
   background: #47b475;
   color: #fff;
   width: 100%;
-  font-size: 11px;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
@@ -1878,7 +1878,7 @@ select {
   outline: none;
   padding-left: 20px;
   position: relative;
-  font-size: 11px;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
@@ -2146,7 +2146,7 @@ button[type="submit"] .form-loading {
 }
 .accordion-1 .title span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2181,7 +2181,7 @@ button[type="submit"] .form-loading {
   background: #47b475;
 }
 .accordion-2 .title {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   padding: 16px 0;
   border-bottom: 1px solid #ccc;
@@ -2261,7 +2261,7 @@ button[type="submit"] .form-loading {
 }
 .button-tabs .tab-title span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2349,7 +2349,7 @@ button[type="submit"] .form-loading {
 }
 .text-tabs .tab-title span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2428,7 +2428,7 @@ button[type="submit"] .form-loading {
 }
 .icon-tabs .tab-title span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2477,13 +2477,13 @@ button[type="submit"] .form-loading {
 }
 .progress-1 .progress-bar span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700;
-  font-size: 11px;
+  font-size: 15px;
 }
 .progress-2 {
   height: auto;
@@ -2493,7 +2493,7 @@ button[type="submit"] .form-loading {
 }
 .progress-2 span {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2535,13 +2535,13 @@ button[type="submit"] .form-loading {
 .breadcrumb-2 li a,
 .breadcrumb-2 li {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700;
-  font-size: 11px;
+  font-size: 15px;
   font-weight: 600;
 }
 .breadcrumb-2 > li + li:before {
@@ -2904,7 +2904,7 @@ button[type="submit"] .form-loading {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  font-size: 11px;
+  font-size: 15px;
   display: inline-block;
   margin-left: 8px;
 }
@@ -2914,7 +2914,7 @@ button[type="submit"] .form-loading {
 }
 .widget .title {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2995,7 +2995,7 @@ button[type="submit"] .form-loading {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  font-size: 13px;
+  font-size: 15px;
 }
 .widget .twitter-feed p {
   padding-left: 22px;
@@ -3047,7 +3047,7 @@ button[type="submit"] .form-loading {
   margin: -8px 0 0;
 }
 .widget .flex-direction-nav li a:before {
-  font-size: 16px;
+  font-size: 18px;
 }
 .widget .flex-direction-nav li a.flex-next {
   right: 8px;
@@ -3662,7 +3662,7 @@ img {
 }
 /*!---------- 26. SHOP ----------*/
 .product-single .image-slider .label {
-  font-size: 12px;
+  font-size: 15px;
   text-transform: uppercase ;
   position: absolute;
   z-index: 3;
@@ -3775,7 +3775,7 @@ td {
   color: #c64444;
   border-radius: 50%;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -4108,7 +4108,7 @@ video {
   margin-right: 24px;
 }
 .post-meta i {
-  font-size: 16px;
+  font-size: 18px;
   margin-right: 8px;
   position: relative;
   top: 2px;
@@ -4510,7 +4510,7 @@ video {
   height: 40px;
   min-width: 150px;
   line-height: 36px;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -4523,7 +4523,7 @@ video {
   margin-right: 8px;
   margin-bottom: 24px;
   height: 30px;
-  font-size: 11px;
+  font-size: 15px;
   line-height: 27px;
   min-width: 0;
   border-color: rgba(255, 255, 255, 0);
@@ -4736,7 +4736,7 @@ video {
   line-height: 32px;
 }
 .tweets-slider.large .timePosted {
-  font-size: 14px;
+  font-size: 15px;
 }
 @media all and (max-width: 990px) {
   .tweets-slider.large p {
@@ -4746,7 +4746,7 @@ video {
 }
 @media all and (max-width: 767px) {
   .tweets-slider.large p {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 .sc-background-orange {
